--- a/workspace/TestingJavaMaven/pom.xml
+++ b/workspace/TestingJavaMaven/pom.xml
@@ -7,18 +7,16 @@
     <groupId>org.example</groupId>
     <artifactId>TestingJavaMaven</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-engine</artifactId>
+          <version>5.8.2</version>
+          <scope>test</scope>
+      </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.8.2</version>
-        <scope>test</scope>
-    </dependency>
-
 </project>
