--- a/workspace/aula-spring-data-jpa/src/main/resources/application.properties
+++ b/workspace/aula-spring-data-jpa/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+#Opcional
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#Obrigátorio de acordo com o seu banco de dados
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/dio_db
+spring.datasource.username=postgres
+spring.datasource.password=12345678
